The screen isn't loading

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,216 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8" ?>
+<androidx.fragment.app.FragmentContainerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/nav_host_fragment"
+    android:name="androidx.navigation.fragment.NavHostFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".presentation.MainActivity">
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginBottom="36dp"
-        android:layout_weight="5"
-        android:gravity="bottom"
-        tools:text="text"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
-        android:textDirection="rtl" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonMod"
-            style="@style/buttonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:backgroundTint="@color/light_purple"
-            android:text="@string/mod"
-            android:textColor="@color/black" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonC"
-            style="@style/buttonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:backgroundTint="@color/light_purple"
-            android:text="@string/c"
-            android:textColor="@color/black" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonBackspace"
-            style="@style/buttonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:backgroundTint="@color/light_purple"
-            android:text="@string/backspace"
-            android:textColor="@color/black" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonDivide"
-            style="@style/buttonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:backgroundTint="@color/light_purple"
-            android:text="@string/divide"
-            android:textColor="@color/black" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonSeven"
-            style="@style/buttonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/seven" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonEight"
-            style="@style/buttonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/eight" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonNine"
-            style="@style/buttonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/nine" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonMultiply"
-            style="@style/buttonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:backgroundTint="@color/light_purple"
-            android:text="@string/multiply"
-            android:textColor="@color/black" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonFour"
-            style="@style/buttonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/four" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonFive"
-            style="@style/buttonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/five" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonSix"
-            style="@style/buttonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/six" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonMinus"
-            style="@style/buttonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:backgroundTint="@color/light_purple"
-            android:text="@string/minus"
-            android:textColor="@color/black" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonOne"
-            style="@style/buttonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/one" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonTwo"
-            style="@style/buttonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/two" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonThree"
-            style="@style/buttonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/three" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonPlus"
-            style="@style/buttonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:backgroundTint="@color/light_purple"
-            android:text="@string/plus"
-            android:textColor="@color/black" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonInversion"
-            style="@style/buttonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/inversion" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonZero"
-            style="@style/buttonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/zero" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonComma"
-            style="@style/buttonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/comma" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonEquals"
-            style="@style/buttonEquals"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:backgroundTint="@color/purple"
-            android:text="@string/equals"
-            android:textColor="@color/white" />
-    </LinearLayout>
-</LinearLayout>
+    app:defaultNavHost="true"
+    app:navGraph="@navigation/nav_graph" />
