Added button listeners

--- a/app/src/main/res/layout/fragment_calculator.xml
+++ b/app/src/main/res/layout/fragment_calculator.xml
@@ -8,6 +8,7 @@
 
     <TextView
         android:id="@+id/textView"
+        android:autoSizeTextType="uniform"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="36dp"
