--- a/app/src/main/res/layout/fragment_calculator.xml
+++ b/app/src/main/res/layout/fragment_calculator.xml
@@ -15,7 +15,7 @@
         android:layout_marginBottom="36dp"
         android:layout_weight="5"
         android:gravity="bottom"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
+        android:autoSizeMaxTextSize="70sp"
         android:textDirection="rtl"
         tools:text="text" />
 
